@@ -1,6 +1,10 @@
 FlightPath 5.x Changelog
 ========================
 
+2016-06-29
+  Fixed bug in Substitution system for split transfer subs, where hours were not being reported correctly.
+
+
 2016-06-26
   Fixed bug in substitution reporting, where it wasn't correctly finding the split sub hours for transfer credits.
   
